test/tests/operators/python/runtime_error.txt
error: Traceback (most recent call last):
  File "<inline>", line 1, in <module>
    raise RuntimeError('boom')
RuntimeError: boom
on input event: {'x': 1}
 --> tests/operators/python/runtime_error.tql:6:1
  |
6 | python "raise RuntimeError('boom')"
  | ^^^^^^ 
  |
